# ch569-pac

./: Cargo.toml  build.rs  config.yml  device.x  gen.sh  notes.md
src/: dvp.rs  ecdc.rs  emmc.rs  hspi.rs  interrupt.rs  lib.rs  pfic.rs  pwmx.rs  spi0.rs  spi1.rs  sys.rs  systick.rs  tmr0.rs  tmr1.rs  tmr2.rs  uart0.rs  uart1.rs  uart2.rs  uart3.rs  usbhs.rs
src/dvp/: r16_dvp_col_cnt.rs  r16_dvp_col_num.rs  r16_dvp_row_cnt.rs  r16_dvp_row_num.rs  r32_dvp_dma_buf0.rs  r32_dvp_dma_buf1.rs  r8_dvp_cr0.rs  r8_dvp_cr1.rs  r8_dvp_fifo_st.rs  r8_dvp_int_en.rs  r8_dvp_int_flag.rs
src/ecdc/: r16_ecec_ctrl.rs  r32_ecdc_iv_127t96.rs  r32_ecdc_iv_31t0.rs  r32_ecdc_iv_63t32.rs  r32_ecdc_iv_95t64.rs  r32_ecdc_key_127t96.rs  r32_ecdc_key_159t128.rs  r32_ecdc_key_191t160.rs  r32_ecdc_key_223t192.rs  r32_ecdc_key_255t224.rs  r32_ecdc_key_31t0.rs  r32_ecdc_key_63t32.rs  r32_ecdc_key_95t64.rs  r32_ecdc_sgrt_127t96.rs  r32_ecdc_sgrt_63t32.rs  r32_ecdc_sgrt_95t64.rs  r32_ecdc_sgsd_127t96.rs  r32_ecdc_sgsd_31t0.rs  r32_ecdc_sgsd_63t32.rs  r32_ecdc_sgsd_95t64.rs  r32_ecdc_sram_addr.rs  r32_ecdc_sram_len.rs  r8_ecdc_int_en.rs  r8_ecdc_int_fg.rs  rb_ecdc_sgrt_31t0.rs
src/emmc/: r16_emmc_clk_div.rs  r16_emmc_cmd_set.rs  r16_emmc_int_en.rs  r16_emmc_int_fg.rs  r32_emmc_argument.rs  r32_emmc_block_cfg.rs  r32_emmc_dma_beg1.rs  r32_emmc_dma_beg2.rs  r32_emmc_response0.rs  r32_emmc_response1.rs  r32_emmc_response2.rs  r32_emmc_response3.rs  r32_emmc_status.rs  r32_emmc_tran_mode.rs  r32_emmc_write_cont.rs  r8_emmc_control.rs  r8_emmc_timeout.rs
src/hspi/: hspi_rx_sc.rs  (+19 more)
svd/: CH56Xxx.svd
(+301 files in other folders)
