[package]
name = "ch569-pac"
version = "0.1.1"
authors = [
    "Matt Thompson <matt@boondocker.io>",
    "Lain Agan <lain@hacktheinter.net>"
]
edition = "2021"

description  = "PAC for CH569 microcontrollers"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/lainy/ch569-pac.git"

[dependencies]
critical-section = { version = "1.2.0", optional = false }
riscv = "0.16.0"
riscv-peripheral = "0.5.0"
riscv-rt = { version = "0.17.0", optional = true, features = ["single-hart", "v-trap"] }
vcell = "0.1.3"

[features]
rt = ["riscv-rt"]
critical-section = []

